Whitespace fixed

--- a/milestone/assets/css/style.css
+++ b/milestone/assets/css/style.css
@@ -1,8 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Mukta:wght@300&family=Open+Sans:wght@300&family=Poppins:wght@300&display=swap");
 
+html,body {
+width: 100%;
+height: 100%;
+margin: 0px;
+padding: 0px;
+overflow-x: hidden;
+}
+
 * {
-    /* margin: 0;
-    padding: 0; */
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
@@ -57,7 +65,6 @@ section .bannerVideo video.active {
 
 .container .content .bannerText {
     position: relative;
-    max-width: 700px;
     background-color: rgba(150, 150, 150, 0.1);
 }
 
@@ -68,6 +75,7 @@ section .bannerVideo video.active {
 
 .container .content .bannerText div.active {
     display: initial;
+    
 }
 
 .container .content .bannerText div h2 {
@@ -185,6 +193,15 @@ cursor: pointer;
 p {
     font-size: small;
     display: inline;
+}
+
+.sci li a {
+width: 40px;
+height: 40px;
+display: flex;
+justify-content: center;
+align-items: center;
+background: #fff;
 }
 }
 
