--- a/milestone/assets/css/stylesheet.css
+++ b/milestone/assets/css/stylesheet.css
@@ -29,11 +29,12 @@ min-height: 100vh;
 	height: 100%;
 } 
 
-h2{
+h2 {
+    color: white;
 	position: relative;
 	padding: 0 0 10px;
 	margin-bottom: 10px;
-} */
+} 
 
 h2:after{
 	content: "";
